三大页面首屏开发

--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -27,3 +27,27 @@ code {
   width: 100%;
   height: 100%;
 }
+
+/* ::-webkit-scrollbar ：滚动条整体部分，其中的属性有width,height,background,border等。
+
+::-webkit-scrollbar-button ：滚动条两端的按钮。可以用display:none让其不显示，也可以添加背景图片，颜色改变显示效果。
+
+::-webkit-scrollbar-track ：外层轨道。可以用display:none让其不显示，也可以添加背景图片，颜色改变显示效果。
+
+::-webkit-scrollbar-track-piece ：内层轨道，具体区别看下面gif图，需要注意的就是它会覆盖第三个属性的样式。
+
+::-webkit-scrollbar-thumb ：滚动条里面可以拖动的那部分
+
+::-webkit-scrollbar-corner ：边角，两个滚动条交汇处
+
+::-webkit-resizer ：两个滚动条交汇处用于拖动调整元素大小的小控件（基本用不上） */
+::-webkit-scrollbar {
+  width: 8px;
+  background: #333;
+}
+::-webkit-scrollbar-button {
+  display: none;
+}
+::-webkit-scrollbar-thumb {
+  background: #777;
+}
