--- a/webapp/src/component/header/index.scss
+++ b/webapp/src/component/header/index.scss
@@ -2,6 +2,7 @@
   position: absolute;
   width: 100%;
   height: 10vh;
+  min-height: 80px;
   display: flex;
   align-items: flex-end;
   justify-content: center;
@@ -13,8 +14,9 @@
     align-items: flex-end;
     justify-content: space-between;
     height: 5vh;
-    width: 70%;
-    min-width: 480px;
+    width: 80%;
+    min-width: 800px;
+    max-width: 1366px;
   }
   .menu-box {
     display: flex;
@@ -29,6 +31,9 @@
       cursor: pointer;
       transition: all 0.3s ease;
       text-shadow: 0px 0px 1px #000000;
+      &.active{
+        color: #eee;
+      }
       &:hover {
         color: #eee;
       }
