--- a/webapp/src/page/aboutUs/index.scss
+++ b/webapp/src/page/aboutUs/index.scss
@@ -12,6 +12,7 @@
 
     .section-item {
       &.bgc {
+        background-image: radial-gradient(farthest-side at 10% 12%, #162d43, #000a1e);
         background-image: url(./assets/banner.png);
         background-size: cover;
         background-repeat: no-repeat;
@@ -21,6 +22,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      background: #eee;
 
       .content-box {
         height: 100%;
@@ -36,14 +38,41 @@
         h5 {
           color: #eee;
           text-shadow: 0px 0px 10px black;
-          font-size: 1.5vw;
+          font-size: 1.6vw;
           margin: 0;
           margin-bottom: 0.8em;
           letter-spacing: 5px;
           &.title {
             font-weight: bold;
-            font-size: 2.2vw;
+            font-size: 2.4vw;
           }
+        }
+      }
+
+      .content-detail{
+        width: 80%;
+        min-width: 800px;
+        max-width: 1366px;
+        height: 80%;
+        min-height: 300px;
+        font-size: 1.8vw;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-around;
+        letter-spacing: 3px;
+        h5{
+          margin: 0;
+          line-height: 3vw;
+        }
+        .title{
+          font-size: 2.4vw;
+          font-weight: bold;
+        }
+        .splitbar{
+          width: 3vw;
+          height: .5vw;
+          background: #21D9E5;
         }
       }
     }
