--- a/webapp/src/page/business/index.scss
+++ b/webapp/src/page/business/index.scss
@@ -18,6 +18,9 @@
           #000a1e
         );
       }
+      &.autohigh{
+        height: auto;
+      }
       height: 100%;
       display: flex;
       align-items: center;
@@ -32,17 +35,87 @@
         align-items: flex-start;
         justify-content: center;
         margin: 0 2vw 0 5vw;
+        position: absolute;
+        left: 5%;
+          h5 {
+            color: #eee;
+            text-shadow: 0px 0px 10px black;
+            font-size: 1.6vw;
+            margin: 0;
+            margin-bottom: 0.8em;
+            letter-spacing: 5px;
+            &.title {
+              font-weight: bold;
+              font-size: 2.4vw;
+            }
+          }
+          &+img{
+            position: absolute;
+            right: 5%;
+          }
+        }
+    }
+    .business-detail{
+      width: 80%;
+      min-width: 800px;
+      max-width: 1366px;
+      height: 80%;
+      min-height: 300px;
+      font-size: 1.8vw;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: space-around;
+      letter-spacing: 3px;
+      padding: 2vw 0 15vw 0;
+      h5{
+        margin: 0;
+        line-height: 3vw;
+      }
+      .title{
+        font-size: 2.4vw;
+        font-weight: bold;
+        margin: 3vw 0;
+      }
 
-        h5 {
-          color: #eee;
-          text-shadow: 0px 0px 10px black;
-          font-size: 1.5vw;
-          margin: 0;
-          margin-bottom: 0.8em;
-          letter-spacing: 5px;
-          &.title {
-            font-weight: bold;
-            font-size: 2.2vw;
+      .rowlayout{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+        margin: 5vw 0;
+        &.mlnf{
+          .layout-item:not(:first-child){
+            margin-left: .5vw;
+          }
+        }
+
+        .layout-item{
+          flex: 1;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: space-between;
+          
+          h5{
+            font-size: 1vw;
+            color: #242424;
+            // white-space: nowrap;
+
+            &.title{
+              font-weight: bold;
+              font-size: 2vw;
+            }
+          }
+
+          .img-box{
+            position: relative;
+            flex: 1;
+            img{
+              object-fit: contain;
+              height: 100%;
+              width: 100%;
+            }
           }
         }
       }
