--- a/webapp/src/page/pageHome/index.scss
+++ b/webapp/src/page/pageHome/index.scss
@@ -10,15 +10,30 @@
     top: 0;
 
     .section-item {
-      background-image: url(./assets/1.png);
+      &.bgc{
+        background-image: url(./assets/1.png);
+      }
+      &.active{
+        transform:translateY(0);
+      }
+      &.up{
+        transform:translateY(-100%);
+      }
+      &.down{
+        transform:translateY(100%);
+      }
+      transform:translateY(-100%);
       display: flex;
       height: 100%;
+      width: 100%;
+      position: absolute;
       background-position: center;
       background-size: cover;
       background-repeat: no-repeat;
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      transition: all .3s ease;
 
       .text1 {
         width: 40%;
@@ -63,6 +78,143 @@
           left: -10vw;
         }
       }
+
+      .section-style2{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        h5{margin:0}
+        .titlebox{
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+        }
+        .title1{
+          font-size: 7vw;
+          font-family: Avenir Next;
+          font-weight: bold;
+          color: rgba(255, 255, 255, 0.03);
+        }
+        .title2{
+          font-size: 2.5vw;
+          font-family: OPPOSans;
+          font-weight: bold;
+          color: #FFF;
+          margin-bottom: 2vw;
+          background-image:-webkit-linear-gradient(bottom, rgba(77, 189, 247, 0.6), rgba(234, 234, 234, 0.6)); 
+          -webkit-background-clip:text; 
+          -webkit-text-fill-color:transparent; 
+        }
+        .title3{
+          font-size: 1.3vw;
+          font-family: OPPOSans;
+          color: #ccc;
+        }
+        .title4{
+          font-size: 1.2vw;
+          font-family: OPPOSans;
+          color: #bbb;
+          width: 55%;
+          min-width: 560px;
+          letter-spacing: 2px;
+          text-align: center;
+          line-height: 2vw;
+        }
+        .arrowbox{
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          justify-content: center;
+          color: #21D9E5;
+          font-size: 1.3vw;
+          margin: 4vw 0;
+          &.sw{
+            width: 60%;
+            min-width: 800px;
+            height: 30%;
+          }
+        }
+        .radius{
+          display: flex;
+          background-image: url(./assets/radius.png);
+          width: 6vw;
+          height: 6vw;
+          background-size: cover;
+          background-repeat: no-repeat;
+          align-items: center;
+          justify-content: center;
+          font-weight: bold;
+        }
+        .arrow{
+          display: flex;
+          background-image: url(./assets/arrow.png);
+          width: 3vw;
+          height: 3vw;
+          background-size: contain;
+          background-repeat: no-repeat;
+        }
+        .bottomline{
+          height: 4vw;
+          background-image: url(./assets/whitearrow.png);
+          border-bottom: 1px solid white;
+          background-repeat: no-repeat;
+          background-size: auto 60%;
+        }
+        .leftbox{
+          flex: 1;
+          margin-right: 2vw;
+          height: 100%;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+
+          .title4{
+            min-width: 100%;
+            text-align: left;
+          }
+        }
+        .rightbox{
+          flex: 1.2;
+          background-image: url(./assets/banner.png);
+          height: 100%;
+          background-size: contain;
+          background-repeat: no-repeat;
+          background-position: center;
+        }
+      }
+    }
+  }
+  .stepBox{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    right: 8px;
+    top: calc(50% - 50px);
+    border-radius: 10px;
+    width: 10px;
+    height: 100px;
+    overflow: hidden;
+    border: 1px solid rgba(255, 255, 255, .15);
+    :nth-child(2){
+      border-top: 0px solid rgba(255, 255, 255, 0)!important;
+    }
+    .stepBg{
+      position: absolute;
+      left: 0;
+      height: 25%;
+      width: 100%;
+      background: #18e;
+      transition: all .3s ease;
+    }
+    .stepItem{
+      position: relative;
+      border-top: 1px solid rgba(255, 255, 255, .1);
+      flex: 1;
+      cursor: pointer;
     }
   }
 }
