--- a/webapp/src/component/footer/index.scss
+++ b/webapp/src/component/footer/index.scss
@@ -1,8 +1,9 @@
 .footer {
   width: 100%;
-  min-width: 800px;
-  height: 450px;
-  background: rgba(0,0,0,0.92);
+  // min-width: 800px;
+  height: 37%;
+  max-height: 420px;
+  background: rgba(0, 0, 0, 0.92);
   // position: absolute;
   bottom: 0;
   left: 0;
@@ -10,7 +11,7 @@
   align-items: center;
   justify-content: center;
 
-  .contentbox{
+  .contentbox {
     height: 90%;
     width: 80%;
     min-width: 800px;
@@ -20,28 +21,28 @@
     align-items: flex-start;
     justify-content: space-around;
     color: #ccc;
-    font-size: calc(1.4vw + 3px);
-    h5{
+    font-size: calc(1.2vw + 3px);
+    h5 {
       margin: 0;
       letter-spacing: 3px;
 
-      &.title{
+      &.title {
         display: flex;
         justify-content: space-between;
         width: 100%;
-        font-size: calc(1.8vw + 3px);
-        img{
+        font-size: calc(1.5vw + 3px);
+        img {
           cursor: pointer;
         }
       }
     }
-    .line{
+    .line {
       height: 1px;
       width: 100%;
       background: #ccc;
     }
 
-    .content-bottom{
+    .content-bottom {
       display: flex;
       align-items: center;
       justify-content: space-between;
